@@ -1,46 +1,48 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.dto.RegisterRequest;
+import com.example.demo.entity.Role;
 import com.example.demo.entity.User;
+import com.example.demo.repository.RoleRepository;
 import com.example.demo.repository.UserRepository;
 import com.example.demo.service.UserService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class UserServiceImpl implements UserService {
-
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final PasswordEncoder encoder;
 
-    public UserServiceImpl(UserRepository userRepository,
-                           PasswordEncoder encoder) {
+    public UserServiceImpl(UserRepository userRepository, RoleRepository roleRepository, PasswordEncoder encoder) {
         this.userRepository = userRepository;
+        this.roleRepository = roleRepository;
         this.encoder = encoder;
     }
 
     @Override
-    public User registerUser(RegisterRequest req) {
-
-        if (req.getEmail() == null || req.getEmail().isBlank()) {
+    @Transactional
+    public User registerUser(RegisterRequest request) {
+        if (request.getEmail() == null || request.getEmail().trim().isEmpty()) {
             throw new IllegalArgumentException("Email is required");
         }
-
-        if (userRepository.findByEmail(req.getEmail()).isPresent()) {
+        if (userRepository.findByEmail(request.getEmail()).isPresent()) {
             throw new IllegalArgumentException("Email already exists");
         }
 
         User user = new User();
-        user.setName(req.getName());
-        user.setEmail(req.getEmail());
-        user.setPassword(encoder.encode(req.getPassword()));
-
-        // 🚫 NO ROLE SAVED TO DB
-        // Just keep roles EMPTY or null-safe
-        user.setRoles(Collections.emptySet());
-
-        return userRepository.save(user);
+        user.setName(request.getName());
+        user.setEmail(request.getEmail());
+        user.setPassword(encoder.encode(request.getPassword()));
+        
+        // Robust Role Logic
+        Role userRole = roleRepository.findByName("USER")
+                .orElseGet(() -> roleRepository.saveAndFlush(new Role("USER")));
+        
+        user.getRoles().add(userRole);
+        
+        return userRepository.saveAndFlush(user);
     }
 }
